--- a/app/src/main/res/layout/fragment_channel_management.xml
+++ b/app/src/main/res/layout/fragment_channel_management.xml
@@ -213,6 +213,207 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/propLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
+            android:visibility="gone"
+            android:layout_marginVertical="20dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="4dp"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@id/llView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/searchCard"
+            app:layout_constraintStart_toStartOf="@id/searchCard">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.09"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.20"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.31"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.39"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.48"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.62"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.76"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.85"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.92"/>
+
+                <TextView
+                    android:id="@+id/channel_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/line"
+                    android:layout_margin="9dp"
+                    android:text="Channel Code"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g1"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Channel Type"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g2"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Channel Name"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g3"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Bookings"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g4"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Bookings%"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g5"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Revenue"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g6"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Mapped"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g7"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Last Booking"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g8"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Status"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g9"
+                    app:layout_constraintTop_toTopOf="@id/channel_code"
+                    app:layout_constraintBottom_toBottomOf="@id/channel_code"
+                    android:text="Actions"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto_medium"/>
+
+                <View
+                    android:id="@+id/line"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    app:layout_constraintTop_toBottomOf="@id/channel_code"
+                    android:background="@color/grey30"
+                    android:layout_marginTop="9dp"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_channel_logs_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintVertical_bias="0"
+                    tools:listitem="@layout/item_recycler_channel_management"
+                    app:layout_constraintTop_toBottomOf="@id/line"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
+
+
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
         <FrameLayout
             android:id="@+id/channel_management_container"
             android:layout_width="0dp"
