--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -20,9 +20,13 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/txt_room"
             style="@style/subHeadingTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
             android:paddingStart="8dp"
@@ -33,88 +37,83 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            app:layout_constraintStart_toEndOf="@id/txt_room"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/svg_arrow_down"
             android:layout_marginStart="25dp"
             />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="77dp"
-            android:layout_marginEnd="10dp"
-            android:gravity="center">
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.205"/>
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".285"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".365"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".104"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".445"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".21"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".525"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".31"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".605"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".412"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".68"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".514"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".76"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".619"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".84"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".732"/>
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".84"/>
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".95"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".92"/>
 
             <TextView
 
@@ -162,7 +161,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 app:layout_constraintStart_toStartOf="@id/g4"
-                app:layout_constraintTop_toTopOf="@id/g4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -228,7 +228,6 @@
                 app:layout_constraintStart_toStartOf="@id/g9"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
@@ -241,15 +240,13 @@
                 app:layout_constraintStart_toStartOf="@id/g10"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
