--- a/app/src/main/res/layout/dialog_add_inclusion.xml
+++ b/app/src/main/res/layout/dialog_add_inclusion.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/createDialogWidth"
+    android:layout_height="@dimen/createDialogHeight"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
+    style="@style/CardViewTheme"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <androidx.cardview.widget.CardView
-        android:layout_height="@dimen/createDialogHeight"
-        android:layout_width="@dimen/createDialogWidth"
-        style="@style/CardViewTheme"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -134,12 +129,11 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/roboto_bold"
                     android:textSize="@dimen/H5"
+                    android:background="@color/black"
                     android:textColor="@color/white"/>
 
             </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
