--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -445,7 +445,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_medium"
-                android:layout_marginTop="10dp"
+                android:layout_marginVertical="15dp"
                 android:text="Rate Plan"
                 android:textAlignment="center"
                 android:textColor="@color/secondary"
@@ -458,98 +458,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginEnd="30dp"
+                android:layout_marginEnd="28dp"
                 app:layout_constraintTop_toTopOf="@id/heading1"
                 app:layout_constraintBottom_toBottomOf="@id/heading1"
                 app:layout_constraintEnd_toEndOf="parent">
 
-                <TextView
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/addMealPlanCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="Meal Plan"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:cardCornerRadius="5dp"
+                    app:cardBackgroundColor="@color/white">
 
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/cpCheckBox"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:buttonTint="@color/skyBlue"
-                    android:layout_marginStart="20dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="Add Meal Plan"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondary"
+                        android:textSize="@dimen/H4"
+                        android:paddingHorizontal="18dp"
+                        android:paddingVertical="10dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="CP"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    android:layout_marginStart="5dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/epCheckBox"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:buttonTint="@color/skyBlue"
-                    android:layout_marginStart="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="EP"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    android:layout_marginStart="5dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/apCheckBox"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:buttonTint="@color/skyBlue"
-                    android:layout_marginStart="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="AP"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    android:layout_marginStart="5dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/mapCheckBox"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:buttonTint="@color/skyBlue"
-                    android:layout_marginStart="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="MAP"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    android:layout_marginStart="5dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
 
