--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -508,6 +508,7 @@
         style="@style/CardViewTheme"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/white"
         app:layout_constraintVertical_bias="0"
         android:layout_marginVertical="15dp"
