--- a/app/src/main/res/layout/item_rate_plan_details.xml
+++ b/app/src/main/res/layout/item_rate_plan_details.xml
@@ -221,7 +221,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:visibility="gone"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp">
@@ -872,6 +871,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
