--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -168,6 +168,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:inputType="number"
+                android:maxLength="10"
                 android:textColorHint="@color/secondary"
                 android:textColor="@color/secondary" />
 
