--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -213,6 +213,7 @@
                                     style="?android:attr/ratingBarStyleIndicator"
                                     android:isIndicator="false"
                                     android:numStars="7"
+                                    android:stepSize="1"
                                     android:progressTint="@color/yellow"
                                     android:layout_marginEnd="10dp"
                                     app:layout_constraintTop_toTopOf="parent"
